2010-01-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/scanner.c (scanner): There was no scanner rule covering a token
	starting with '.'. This caused ambiguity in the interpretation of '.E1'.
	Is it a strange representation of 0, or concatenation of a string
	variable E1?  Resolve this with a new rule that a number with an initial
	'.' must continue with a digit.
	Bugfix

2010-01-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): Fix "pause mouse" for gnuplot.exe on
	Windows.

2010-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* INSTALL: Add section explaining the libreadline problem on OSX.

2010-01-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/wgraph.c (drawgraph pattern_bitmaps): Synchronize fill
	patterns of the Windows terminal with other terminals.

2010-01-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/variable.c (loadpath_handler):  Have "show loadpath" also list
	the environmental variable GNUPLOT_PS_DIR.
	Bug #2933345

2010-01-15  <ottxor@users.sourceforge.net>

	* configure.in src/Makefile.am demo/Makefile.am.in:
	"make check" needs help if we did ./configure --program-suffix=FOO
	In this case make a temporary symlink so that 'make check' can find
	gnuplot_x11.
	Bug #2926141

2010-01-12  Alexander Täschner  <taschna@users.sourceforge.net>

	* src/win/winmain.c (MyVFPrintF): Microsoft Visual C does not use
	va_copy() and va_end().

2010-01-12  <ottxor@users.sourceforge.net>

	* configure.in share/Makefile.am:  Do not install LaTeX support files
	if there is no latex on the system.  Add configuration option
	--without-latex
	Bug #2928310

2010-01-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Always start a new path with a moveto.
	Bug #2930705

	* src/plot2d.c (eval_plots): In generating points for a function plot,
	only x and y were guaranteed to be initialized. Now to be safe we
	initialize all fields.
	Bug #2930705
