@@ -1,3 +1,9 @@
+2010-01-31  Shigeharu Takeno  <shige@iee.niit.ac.jp>
+
+	* src/command.c (pause_command): Fixes for pause on Windows with wxt.
+
+	* src/wxterminal/wxt_gui.cpp (wxt_waitforinput): Fix for Windows.
+
 2010-01-29  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/scanner.c (scanner): There was no scanner rule covering a token
